[gd_scene load_steps=9 format=3 uid="uid://yig4gdequfhp"]

[ext_resource type="Script" uid="uid://cgteomq2xduj6" path="res://TotalWar/TotalWarScripts/Shop.gd" id="1_aehfv"]
[ext_resource type="Texture2D" uid="uid://7wp4y0hbi1ee" path="res://TotalWar/Assets/ShopBackground.webp" id="2_l6llt"]
[ext_resource type="FontFile" uid="uid://ccayte7og7sqr" path="res://Assets/I-pixel-u.ttf" id="3_rwgmv"]
[ext_resource type="Texture2D" uid="uid://1sql4pmy32c8" path="res://TotalWar/Assets/ChessTextures/BPawn.svg" id="4_aehfv"]
[ext_resource type="Texture2D" uid="uid://ca8t2shoassp2" path="res://TotalWar/Assets/ChessTextures/BBishop.svg" id="5_l6llt"]
[ext_resource type="Texture2D" uid="uid://bjneg3fh7mu2e" path="res://TotalWar/Assets/ChessTextures/BKnight.svg" id="6_rwgmv"]
[ext_resource type="Texture2D" uid="uid://2an2oqh0ks1y" path="res://TotalWar/Assets/ChessTextures/BRook.svg" id="7_xrpqd"]
[ext_resource type="Texture2D" uid="uid://cla2mshxp0elx" path="res://TotalWar/Assets/ChessTextures/BQueen.svg" id="8_datsd"]

[node name="Shop" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_aehfv")

[node name="BackgroundTexture" type="TextureRect" parent="Control"]
layout_mode = 0
offset_top = -225.0
offset_right = 1152.0
offset_bottom = 799.0
texture = ExtResource("2_l6llt")
stretch_mode = 6

[node name="MoneyContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
offset_left = 923.0
offset_right = 1151.0
offset_bottom = 53.0

[node name="Label" type="Label" parent="Control/MoneyContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 36
text = "Money:"

[node name="MoneyAmount" type="Label" parent="Control/MoneyContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 42
text = "1000"

[node name="PiecesContainer" type="GridContainer" parent="Control"]
layout_mode = 1
offset_left = -1.0
offset_top = 76.0
offset_right = 690.0
offset_bottom = 250.0
scale = Vector2(1.65, 1.65)
theme_override_constants/h_separation = 150
columns = 5

[node name="BPawn" type="Control" parent="Control/PiecesContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PiecesContainer/BPawn"]
layout_mode = 0
offset_right = 92.0
offset_bottom = 165.0

[node name="NameLabel" type="Label" parent="Control/PiecesContainer/BPawn/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 24
text = "PAWN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Portrait" type="TextureRect" parent="Control/PiecesContainer/BPawn/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_aehfv")
stretch_mode = 5

[node name="Price" type="Label" parent="Control/PiecesContainer/BPawn/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(57.459, 29.834, 0, 1)
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 24
text = "1P"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuantityContainer" type="HBoxContainer" parent="Control/PiecesContainer/BPawn/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MinusButton" type="Button" parent="Control/PiecesContainer/BPawn/VBoxContainer/QuantityContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "-"

[node name="QuantityLabel" type="Label" parent="Control/PiecesContainer/BPawn/VBoxContainer/QuantityContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusButton" type="Button" parent="Control/PiecesContainer/BPawn/VBoxContainer/QuantityContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "+"

[node name="BBishop" type="Control" parent="Control/PiecesContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PiecesContainer/BBishop"]
layout_mode = 0
offset_right = 92.0
offset_bottom = 165.0

[node name="NameLabel" type="Label" parent="Control/PiecesContainer/BBishop/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 24
text = "BISHOP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Portrait" type="TextureRect" parent="Control/PiecesContainer/BBishop/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_l6llt")
stretch_mode = 5

[node name="Price" type="Label" parent="Control/PiecesContainer/BBishop/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(57.459, 29.834, 0, 1)
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 24
text = "3P"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuantityContainer" type="HBoxContainer" parent="Control/PiecesContainer/BBishop/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MinusButton" type="Button" parent="Control/PiecesContainer/BBishop/VBoxContainer/QuantityContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "-"

[node name="QuantityLabel" type="Label" parent="Control/PiecesContainer/BBishop/VBoxContainer/QuantityContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusButton" type="Button" parent="Control/PiecesContainer/BBishop/VBoxContainer/QuantityContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "+"

[node name="BKnight" type="Control" parent="Control/PiecesContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PiecesContainer/BKnight"]
layout_mode = 0
offset_right = 92.0
offset_bottom = 165.0

[node name="NameLabel" type="Label" parent="Control/PiecesContainer/BKnight/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 24
text = "KNIGHT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Portrait" type="TextureRect" parent="Control/PiecesContainer/BKnight/VBoxContainer"]
layout_mode = 2
texture = ExtResource("6_rwgmv")
stretch_mode = 5

[node name="Price" type="Label" parent="Control/PiecesContainer/BKnight/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(57.459, 29.834, 0, 1)
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 24
text = "3P"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuantityContainer" type="HBoxContainer" parent="Control/PiecesContainer/BKnight/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MinusButton" type="Button" parent="Control/PiecesContainer/BKnight/VBoxContainer/QuantityContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "-"

[node name="QuantityLabel" type="Label" parent="Control/PiecesContainer/BKnight/VBoxContainer/QuantityContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusButton" type="Button" parent="Control/PiecesContainer/BKnight/VBoxContainer/QuantityContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "+"

[node name="BRook" type="Control" parent="Control/PiecesContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PiecesContainer/BRook"]
layout_mode = 0
offset_right = 92.0
offset_bottom = 165.0

[node name="NameLabel" type="Label" parent="Control/PiecesContainer/BRook/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 24
text = "ROOK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Portrait" type="TextureRect" parent="Control/PiecesContainer/BRook/VBoxContainer"]
layout_mode = 2
texture = ExtResource("7_xrpqd")
stretch_mode = 5

[node name="Price" type="Label" parent="Control/PiecesContainer/BRook/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(57.459, 29.834, 0, 1)
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 24
text = "5P"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuantityContainer" type="HBoxContainer" parent="Control/PiecesContainer/BRook/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MinusButton" type="Button" parent="Control/PiecesContainer/BRook/VBoxContainer/QuantityContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "-"

[node name="QuantityLabel" type="Label" parent="Control/PiecesContainer/BRook/VBoxContainer/QuantityContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusButton" type="Button" parent="Control/PiecesContainer/BRook/VBoxContainer/QuantityContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "+"

[node name="BQueen" type="Control" parent="Control/PiecesContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PiecesContainer/BQueen"]
layout_mode = 0
offset_right = 92.0
offset_bottom = 165.0

[node name="NameLabel" type="Label" parent="Control/PiecesContainer/BQueen/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 24
text = "QUEEN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Portrait" type="TextureRect" parent="Control/PiecesContainer/BQueen/VBoxContainer"]
layout_mode = 2
texture = ExtResource("8_datsd")
stretch_mode = 5

[node name="Price" type="Label" parent="Control/PiecesContainer/BQueen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(57.459, 29.834, 0, 1)
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 24
text = "8P"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuantityContainer" type="HBoxContainer" parent="Control/PiecesContainer/BQueen/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MinusButton" type="Button" parent="Control/PiecesContainer/BQueen/VBoxContainer/QuantityContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "-"

[node name="QuantityLabel" type="Label" parent="Control/PiecesContainer/BQueen/VBoxContainer/QuantityContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusButton" type="Button" parent="Control/PiecesContainer/BQueen/VBoxContainer/QuantityContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 32
text = "+"

[node name="ButtonsContainer" type="HBoxContainer" parent="Control"]
offset_left = 13.0
offset_top = 531.0
offset_right = 388.0
offset_bottom = 564.0
scale = Vector2(3, 3)
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="Control/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.939418, 0.823905, 0, 1)
theme_override_colors/font_color = Color(0.758192, 0.758192, 0.758192, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 20
text = "BACK"

[node name="ResetButton" type="Button" parent="Control/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.992794, 0.258832, 0.199953, 1)
theme_override_colors/font_color = Color(0.849573, 0.0541859, 0.0310228, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 20
text = "RESET"
flat = true

[node name="ConfirmButton" type="Button" parent="Control/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.33458, 0.998899, 0.306519, 1)
theme_override_colors/font_color = Color(0, 29.282, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_rwgmv")
theme_override_font_sizes/font_size = 20
text = "CONFIRM"
